Fix critical bugs and warnings found during code review
- Fix static globalTime causing shared state across wallpaper instances
- Add null safety to HexRendererWrapper.getInfo() and preference lookups
- Validate shader source split delimiter to prevent ArrayIndexOutOfBounds
- Replace SharedPreferences.commit() with async apply()
- Replace unnecessary AtomicInteger with plain int for GL locations
- Remove glClear(0) no-op and validate framebuffer completeness
- Add release() methods to RenderTarget, Texture, and ShaderProgram to
  prevent GPU memory leaks on surface recreation
- Release old render targets before creating new ones in onSurfaceChanged
- Use dedicated lock object instead of synchronized(context)
- Fix PreferenceParser.extractSection() to use its separator parameter
- Use Handler(Looper.getMainLooper()) instead of deprecated Handler()
- Use getDeclaredConstructor().newInstance() instead of deprecated newInstance()